--- a/projects.html
+++ b/projects.html
@@ -1,12 +1,7 @@
 ---
-layout: archive
-title: "Projects"
+layout: home
+title: Projects
 permalink: /projects/
-collection: projects
-author_profile: true
 ---
 
-
-{% for post in site.projects %}
-  {% include archive-single.html %}
-{% endfor %}
+{% include feature_row id="intro" type="center" %}
