--- a/index.html
+++ b/index.html
@@ -1,4 +1,32 @@
 ---
-layout: home
+layout: single
+title: "Home"
+permalink: /
+classes: wide
 author_profile: true
 ---
+
+<div style="display: flex; flex-wrap: wrap; justify-content: space-between; gap: 20px; margin-top: 20px;">
+
+  <!-- About Me Section -->
+  <div style="flex: 1 1 48%;">
+    <h2>👋 About Me</h2>
+    <p>I'm <strong>Bhupender</strong>, a Data Science and Business Analytics graduate from the University of Warsaw.</p>
+    <p>Passionate about applying data science to real-world problems — with skills in machine learning, NLP, Python, and data engineering.</p>
+    <ul>
+      <li>🌱 Currently learning <strong>Data Science & ML with Scaler</strong></li>
+      <li>🎓 Finished <strong>Computer Science and Engineering</strong></li>
+      <li>📍 Based in Warsaw, Poland</li>
+    </ul>
+  </div>
+
+  <!-- Skills Section -->
+  <div style="flex: 1 1 48%;">
+    <h2>🧠 Skills & Tools</h2>
+    <p><strong>Languages:</strong> Python, R, SQL, HTML, CSS</p>
+    <p><strong>Libraries:</strong> pandas, scikit-learn, matplotlib, seaborn, Flask, Streamlit, BeautifulSoup</p>
+    <p><strong>Data Tools:</strong> Power BI, Tableau, MySQL, MariaDB, GitHub, R Shiny</p>
+    <p><strong>Others:</strong> Jupyter, VS Code, GeoPandas, Selenium, Bash</p>
+  </div>
+
+</div>
