--- a/index.html
+++ b/index.html
@@ -30,3 +30,26 @@ author_profile: true
   </div>
 
 </div>
+
+<!-- ===================== FEATURED PROJECTS ===================== -->
+<br>
+<h2>🚀 Featured Projects</h2>
+
+<div style="display: flex; flex-wrap: wrap; gap: 30px; margin-top: 20px;">
+  
+  <!-- Project 1 -->
+  <div style="flex: 1 1 300px; border: 1px solid #ddd; border-radius: 10px; padding: 20px;">
+    <h3><a href="/projects/predictive-analysis-ecommerce">E-Commerce Predictive Analysis</a></h3>
+    <p>Built a predictive analytics model to forecast purchase behavior using customer segmentation and sales trends. Applied ML algorithms and visualized insights with Power BI & Python.</p>
+    <p><strong>Tech:</strong> Python, Pandas, Power BI, Scikit-learn</p>
+  </div>
+
+  <!-- Project 2 -->
+  <div style="flex: 1 1 300px; border: 1px solid #ddd; border-radius: 10px; padding: 20px;">
+    <h3><a href="/projects/social-networks-spatial-ml">Social Networks & Spatial ML</a></h3>
+    <p>Studied urban tech diffusion using Crunchbase data. Combined spatial analysis, network centrality, and Python-based visualizations to map innovation hubs.</p>
+    <p><strong>Tech:</strong> NetworkX, GeoPandas, Python, Spatial ML</p>
+  </div>
+
+</div>
+
