--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@ permalink: /
 classes: wide
 author_profile: true
 ---
+<!-- Typing Text Banner -->
+<p align="center">
+  <img src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&size=24&pause=1000&color=000000&center=true&vCenter=true&width=600&lines=Hi%F0%9F%91%8B%2C+I'm+Bhupender;Data+Analyst+%7C+ML+%7C+Python+%7C+NLP+%7C+Power+BI;Welcome+to+my+portfolio!+🚀" alt="Typing SVG">
+</p>
 
 <div style="display: flex; flex-wrap: wrap; justify-content: space-between; gap: 20px; margin-top: 20px;">
 
@@ -52,4 +56,11 @@ author_profile: true
   </div>
 
 </div>
+
+<br>
+<h2>📊 GitHub Stats</h2>
+<p align="center">
+  <img src="https://github-readme-stats.vercel.app/api?username=Bhupender-Bhupender&show_icons=true&theme=default" alt="GitHub Stats" width="60%">
+</p>
+
 
