--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ author_profile: true
 ---
 <!-- Typing Text Banner -->
 <p align="center">
-  <img src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&size=24&pause=1000&color=000000&center=true&vCenter=true&width=600&lines=Hi%F0%9F%91%8B%2C+I'm+Bhupender;Data+Analyst+%7C+ML+%7C+Python+%7C+NLP+%7C+Power+BI;Welcome+to+my+portfolio!+🚀" alt="Typing SVG">
+  <img src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&size=24&pause=1000&color=000000&center=true&vCenter=true&width=600&lines=Hi%F0%9F%91%8B%2C+I'm+Bhupender;Welcome+to+my+portfolio!+🚀" alt="Typing SVG">
 </p>
 
 <div style="display: flex; flex-wrap: wrap; justify-content: space-between; gap: 20px; margin-top: 20px;">
