--- a/index.html
+++ b/index.html
@@ -10,35 +10,45 @@ author_profile: true
   <img src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&size=24&pause=1000&color=000000&center=true&vCenter=true&width=600&lines=Hi%F0%9F%91%8B%2C+I'm+Bhupender;Welcome+to+my+portfolio!+🚀" alt="Typing SVG">
 </p>
 
-<div style="display: flex; flex-wrap: wrap; justify-content: space-between; gap: 20px; margin-top: 20px;">
+<!-- Two-column layout -->
+<div style="display: flex; flex-wrap: wrap; gap: 20px; margin-top: 20px;">
 
-  <!-- 👋 About Me -->
-<h2>👋 About Me</h2>
-<p>
-  I'm <strong>Bhupender</strong>, a Data Science and Business Analytics graduate from the University of Warsaw.
-</p>
+  <!-- Left column (About + Skills) -->
+  <div style="flex: 1 1 60%; min-width: 300px;">
 
-<p>
-  Passionate about applying data science to real-world problems — with skills in machine learning, NLP, Python, and data engineering.
-</p>
+    <!-- 👋 About Me -->
+    <h2>👋 About Me</h2>
+    <p>
+      I'm <strong>Bhupender</strong>, a Data Science and Business Analytics graduate from the University of Warsaw.
+    </p>
 
-<ul>
-  <li>🌱 Currently learning <strong>Data Science & ML with Scaler</strong></li>
-  <li>🎓 Finished <strong>Computer Science and Engineering</strong></li>
-  <li>📍 Based in Warsaw, Poland</li>
-</ul>
+    <p>
+      Passionate about applying data science to real-world problems — with skills in machine learning, NLP, Python, and data engineering.
+    </p>
 
-<br>
+    <ul>
+      <li>🌱 Currently learning <strong>Data Science & ML with Scaler</strong></li>
+      <li>🎓 Finished <strong>Computer Science and Engineering</strong></li>
+      <li>📍 Based in Warsaw, Poland</li>
+    </ul>
 
-<!-- 🧠 Skills & Tools -->
-<h2>🧠 Skills & Tools</h2>
+    <br>
 
-<p><strong>Languages:</strong> Python, R, SQL, HTML, CSS</p>
-<p><strong>Libraries:</strong> pandas, scikit-learn, matplotlib, seaborn, Flask, Streamlit, BeautifulSoup</p>
-<p><strong>Data Tools:</strong> Power BI, Tableau, MySQL, MariaDB, GitHub, R Shiny</p>
-<p><strong>Others:</strong> Jupyter, VS Code, GeoPandas, Selenium, Bash</p>
+    <!-- 🧠 Skills & Tools -->
+    <h2>🧠 Skills & Tools</h2>
+    <p><strong>Languages:</strong> Python, R, SQL, HTML, CSS</p>
+    <p><strong>Libraries:</strong> pandas, scikit-learn, matplotlib, seaborn, Flask, Streamlit, BeautifulSoup</p>
+    <p><strong>Data Tools:</strong> Power BI, Tableau, MySQL, MariaDB, GitHub, R Shiny</p>
+    <p><strong>Others:</strong> Jupyter, VS Code, GeoPandas, Selenium, Bash</p>
+  </div>
 
-<br>
+  <!-- Right column (Image placeholder) -->
+  <div style="flex: 1 1 30%; min-width: 200px; display: flex; align-items: center; justify-content: center;">
+    <img src="/assets/images/157235479.jpeg" alt="Bhupender profile" style="max-width: 100%; border-radius: 15px;">
+  </div>
+
+</div>
+
 
 
 <!-- ===================== FEATURED PROJECTS ===================== -->
