--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@ author_profile: true
     <p><strong>Others:</strong> Jupyter, VS Code, GeoPandas, Selenium, Bash</p>
   </div>
 
-  <!-- Right column (Image placeholder) -->
-  <div style="flex: 1 1 30%; min-width: 200px; display: flex; align-items: center; justify-content: center;">
-    <img src="/assets/images/157235479.jpeg" alt="Bhupender profile" style="max-width: 100%; border-radius: 15px;">
-  </div>
-
+  <!-- Right column (Image) -->
+<div style="flex: 1 1 30%; min-width: 200px; display: flex; align-items: center; justify-content: center;">
+  <img src="/assets/images/Home.gif"
+       alt=""
+       style="max-width: 100%; border-radius: 15px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15); border: 2px solid #ddd;">
 </div>
+
 
 
 
