--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@ author_profile: true
   <img src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&size=24&pause=1000&color=000000&center=true&vCenter=true&width=600&lines=Hi%F0%9F%91%8B%2C+I'm+Bhupender;Welcome+to+my+portfolio!+🚀" alt="Typing SVG">
 </p>
 
-<!-- Two-column layout -->
-<div style="display: flex; flex-wrap: wrap; gap: 20px; margin-top: 20px;">
+<!-- 2-Column Section: About Me & Image -->
+<div style="display: flex; flex-wrap: wrap; justify-content: space-between; gap: 30px; align-items: flex-start; margin-top: 20px;">
 
-  <!-- Left column (About + Skills) -->
+  <!-- Left Column: About Me + Skills -->
   <div style="flex: 1 1 60%; min-width: 300px;">
 
     <!-- 👋 About Me -->
@@ -21,18 +21,14 @@ author_profile: true
     <p>
       I'm <strong>Bhupender</strong>, a Data Science and Business Analytics graduate from the University of Warsaw.
     </p>
-
     <p>
       Passionate about applying data science to real-world problems — with skills in machine learning, NLP, Python, and data engineering.
     </p>
-
     <ul>
       <li>🌱 Currently learning <strong>Data Science & ML with Scaler</strong></li>
       <li>🎓 Finished <strong>Computer Science and Engineering</strong></li>
       <li>📍 Based in Warsaw, Poland</li>
     </ul>
-
-    <br>
 
     <!-- 🧠 Skills & Tools -->
     <h2>🧠 Skills & Tools</h2>
@@ -42,12 +38,13 @@ author_profile: true
     <p><strong>Others:</strong> Jupyter, VS Code, GeoPandas, Selenium, Bash</p>
   </div>
 
-  <!-- Right column (Image) -->
-<div style="flex: 1 1 30%; min-width: 200px; display: flex; align-items: center; justify-content: center;">
-  <img src="/assets/images/Home.gif"
-       alt=""
-       style="max-width: 100%; border-radius: 15px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15); border: 2px solid #ddd;">
+  <!-- Right Column: GIF Image -->
+  <div style="flex: 1 1 35%; min-width: 250px; display: flex; justify-content: center; align-items: center;">
+    <img src="/assets/images/Home.gif" alt="Visual" style="max-width: 100%; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); border: 1px solid #ccc;">
+  </div>
+
 </div>
+
 
 
 
