--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ author_profile: true
 
   <!-- Right Column: GIF Image -->
   <div style="flex: 1 1 35%; min-width: 250px; display: flex; justify-content: center; align-items: center;">
-    <img src="/assets/images/Home.gif" alt="Visual" style="max-width: 100%; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); border: 1px solid #ccc;">
+    <img src="{{ '/assets/images/Home.gif' | relative_url }}" alt="Visual" style="max-width: 100%; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); border: 1px solid #ccc;">
   </div>
 
 </div>
