--- a/index.html
+++ b/index.html
@@ -1,73 +1,80 @@
 ---
 layout: single
-title: "Bhupender Sumbharwal"
 permalink: /
 classes: wide
+author_profile: true
 ---
+<!-- Typing Text Banner -->
+<p align="center">
+  <img src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&size=24&pause=1000&color=000000&center=true&vCenter=true&width=600&lines=Hi%F0%9F%91%8B%2C+I'm+Bhupender;Welcome+to+my+portfolio!+🚀" alt="Typing SVG">
+</p>
 
-<!-- HOME -->
-<section id="home" style="text-align:center; padding: 4em 2em;">
-  <h1>Hi, I’m Bhupender 👋</h1>
-  <p>Turning data into insights | Data Analyst | MSc Student at UW</p>
-  <a href="#projects">📁 View My Projects</a>
-</section>
+<!-- 2-Column Section: About Me & Image -->
+<div style="display: flex; flex-wrap: wrap; justify-content: space-between; gap: 30px; align-items: flex-start; margin-top: 20px;">
 
----
+  <!-- Left Column: About Me + Skills -->
+  <div style="flex: 1 1 60%; min-width: 300px;">
 
-<!-- ABOUT -->
-<section id="about">
-## 👨‍💼 About Me
+    <!-- 👋 About Me -->
+    <h2>👋 About Me</h2>
+    <p>
+      I'm <strong>Bhupender</strong>, a Data Science and Business Analytics graduate from the University of Warsaw.
+    </p>
+    <p>
+      Passionate about applying data science to real-world problems — with skills in machine learning, NLP, Python, and data engineering.
+    </p>
+    <ul>
+      <li>🌱 Currently learning <strong>Data Science & ML with Scaler</strong></li>
+      <li>🎓 Finished <strong>Computer Science and Engineering</strong></li>
+      <li>📍 Based in Warsaw, Poland</li>
+    </ul>
 
-I’m a passionate **Data Analyst** currently pursuing my Master’s in Data Science and Business Analytics at the **University of Warsaw**.
+    <!-- 🧠 Skills & Tools -->
+    <h2>🧠 Skills & Tools</h2>
+    <p><strong>Languages:</strong> Python, R, SQL, HTML, CSS</p>
+    <p><strong>Libraries:</strong> pandas, scikit-learn, matplotlib, seaborn, Flask, Streamlit, BeautifulSoup</p>
+    <p><strong>Data Tools:</strong> Power BI, Tableau, MySQL, MariaDB, GitHub, R Shiny</p>
+    <p><strong>Others:</strong> Jupyter, VS Code, GeoPandas, Selenium, Bash</p>
+  </div>
 
-I enjoy solving real-world problems with **Python**, **SQL**, **Power BI**, and **machine learning** tools. I’ve worked on projects in e-commerce analytics, ESG impact modeling, and startup network mapping.
+  <!-- Right Column: GIF Image -->
+  <div style="flex: 1 1 35%; min-width: 250px; display: flex; justify-content: center; align-items: center;">
+    <img src="{{ '/assets/images/Home.gif' | relative_url }}" alt="Visual" style="max-width: 100%; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); border: 1px solid #ccc;">
+  </div>
 
-</section>
-
----
-
-<!-- PROJECTS -->
-<section id="projects">
-## 💼 Projects
-
-<div class="grid__wrapper">
-
-<div class="grid__item">
-  <img src="/assets/images/project1.png" width="100%">
-  <h4>🛍️ Predictive Analysis – E-commerce</h4>
-  <p>Built a model to predict customer conversion rate using scikit-learn.</p>
 </div>
 
-<div class="grid__item">
-  <img src="/assets/images/project2.png" width="100%">
-  <h4>📊 ESG & Stock Price</h4>
-  <p>Analyzed ESG impact on P&G stock performance during COVID-19.</p>
+
+
+
+
+<!-- ===================== FEATURED PROJECTS ===================== -->
+<br>
+<h2>🚀 Featured Projects</h2>
+
+<div style="display: flex; flex-wrap: wrap; gap: 30px; margin-top: 20px;">
+  
+  <!-- Project 1 -->
+  <div style="flex: 1 1 300px; border: 1px solid #ddd; border-radius: 10px; padding: 20px;">
+    <h3><a href="/projects/predictive-analysis-ecommerce">E-Commerce Predictive Analysis</a></h3>
+    <p>Built a predictive analytics model to forecast purchase behavior using customer segmentation and sales trends. Applied ML algorithms and visualized insights with Power BI & Python.</p>
+    <p><strong>Tech:</strong> Python, Pandas, Power BI, Scikit-learn</p>
+  </div>
+
+  <!-- Project 2 -->
+  <div style="flex: 1 1 300px; border: 1px solid #ddd; border-radius: 10px; padding: 20px;">
+    <h3><a href="/projects/social-networks-spatial-ml">Social Networks & Spatial ML</a></h3>
+    <p>Studied urban tech diffusion using Crunchbase data. Combined spatial analysis, network centrality, and Python-based visualizations to map innovation hubs.</p>
+    <p><strong>Tech:</strong> NetworkX, GeoPandas, Python, Spatial ML</p>
+  </div>
+
 </div>
 
-<!-- Add more projects here -->
+<br>
+<h2>📊 GitHub Stats</h2>
+<p align="center">
+  <img src="https://github-readme-stats.vercel.app/api?username=Bhupender-Bhupender&show_icons=true&theme=default" alt="GitHub Stats" width="60%">
+</p>
 
-</div>
-</section>
+<!-- force rebuild -->
 
----
-
-<!-- CERTIFICATIONS -->
-<section id="certifications">
-## 📜 Certifications
-
-- Python Libraries for Data Analysis – Scaler  
-- Anti-Money Laundering – University of Warsaw
-
-</section>
-
----
-
-<!-- CONTACT -->
-<section id="contact">
-## 📬 Contact
-
-📧 Email: bhupender@example.com  
-💼 [LinkedIn](https://linkedin.com/in/your-profile)  
-🐱 [GitHub](https://github.com/Bhupender-Bhupender)
-
-</section>
