--- a/index.html
+++ b/index.html
@@ -4,77 +4,63 @@ permalink: /
 classes: wide
 author_profile: true
 ---
-<!-- Typing Text Banner -->
-<p align="center">
-  <img src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&size=24&pause=1000&color=000000&center=true&vCenter=true&width=600&lines=Hi%F0%9F%91%8B%2C+I'm+Bhupender;Welcome+to+my+portfolio!+🚀" alt="Typing SVG">
-</p>
 
-<!-- 2-Column Section: About Me & Image -->
-<div style="display: flex; flex-wrap: wrap; justify-content: space-between; gap: 30px; align-items: flex-start; margin-top: 20px;">
+<!-- HERO SECTION -->
+<section style="text-align: center; padding: 4em 1em 2em; background: #f5f5f5;">
+  <h1 style="font-size: 2.8em; margin-bottom: 0.3em;">Bhupender Sumbharwal</h1>
+  <p style="font-size: 1.1em; color: #555;">Data Science & Business Analytics | Machine Learning | Data Engineering</p>
+  <img src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&size=22&pause=1000&color=000000&center=true&vCenter=true&width=600&lines=Welcome+to+my+portfolio" alt="Typing Text" style="margin-top: 20px;">
+</section>
 
-  <!-- Left Column: About Me + Skills -->
-  <div style="flex: 1 1 60%; min-width: 300px;">
+<!-- ABOUT ME -->
+<section style="padding: 3em 2em; background: #ffffff;">
+  <h2>About Me</h2>
+  <p>
+    I’m <strong>Bhupender</strong>, a graduate in Data Science and Business Analytics from the University of Warsaw, with a foundation in Computer Science and Engineering.
+    I specialize in applying data-driven techniques to solve real-world business problems using tools like Python, Power BI, and machine learning.
+  </p>
+  <p>
+    I'm based in Warsaw, Poland and currently focusing on advanced data science, automation, and scalable data pipelines.
+  </p>
+</section>
 
-    <!-- 👋 About Me -->
-    <h2>👋 About Me</h2>
-    <p>
-      I'm <strong>Bhupender</strong>, a Data Science and Business Analytics graduate from the University of Warsaw.
-    </p>
-    <p>
-      Passionate about applying data science to real-world problems — with skills in machine learning, NLP, Python, and data engineering.
-    </p>
-    <ul>
-      <li>🌱 Currently learning <strong>Data Science & ML with Scaler</strong></li>
-      <li>🎓 Finished <strong>Computer Science and Engineering</strong></li>
-      <li>📍 Based in Warsaw, Poland</li>
-    </ul>
+<!-- SKILLS & TOOLS -->
+<section style="padding: 3em 2em; background: #f0f9ff;">
+  <h2>Skills & Tools</h2>
+  <ul>
+    <li><strong>Languages:</strong> Python, R, SQL, HTML, CSS</li>
+    <li><strong>Libraries & Frameworks:</strong> pandas, scikit-learn, matplotlib, seaborn, Flask, Streamlit</li>
+    <li><strong>Data Tools:</strong> Power BI, Tableau, MySQL, MariaDB, GitHub, R Shiny</li>
+    <li><strong>Others:</strong> Jupyter, VS Code, Selenium, Bash</li>
+  </ul>
+</section>
 
-    <!-- 🧠 Skills & Tools -->
-    <h2>🧠 Skills & Tools</h2>
-    <p><strong>Languages:</strong> Python, R, SQL, HTML, CSS</p>
-    <p><strong>Libraries:</strong> pandas, scikit-learn, matplotlib, seaborn, Flask, Streamlit, BeautifulSoup</p>
-    <p><strong>Data Tools:</strong> Power BI, Tableau, MySQL, MariaDB, GitHub, R Shiny</p>
-    <p><strong>Others:</strong> Jupyter, VS Code, GeoPandas, Selenium, Bash</p>
+<!-- FEATURED PROJECTS -->
+<section style="padding: 3em 2em; background: #fdf7f0;">
+  <h2>Featured Projects</h2>
+  <div style="display: flex; flex-wrap: wrap; gap: 30px; margin-top: 20px;">
+
+    <!-- Project 1 -->
+    <div style="flex: 1 1 300px; background: #ffffff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
+      <h3><a href="/projects/predictive-analysis-ecommerce">E-Commerce Predictive Analysis</a></h3>
+      <p>Forecasted customer purchase behavior using machine learning, customer segmentation, and sales trends.</p>
+      <p><strong>Tools:</strong> Python, Pandas, Scikit-learn, Power BI</p>
+    </div>
+
+    <!-- Project 2 -->
+    <div style="flex: 1 1 300px; background: #ffffff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
+      <h3><a href="/projects/social-networks-spatial-ml">Social Networks & Spatial ML</a></h3>
+      <p>Analyzed startup innovation spread using spatial analysis, network centrality, and geographic mapping.</p>
+      <p><strong>Tools:</strong> Python, GeoPandas, NetworkX</p>
+    </div>
+
   </div>
+</section>
 
-  <!-- Right Column: GIF Image -->
-  <div style="flex: 1 1 35%; min-width: 250px; display: flex; justify-content: center; align-items: center;">
-    <img src="{{ '/assets/images/Home.gif' | relative_url }}" alt="Visual" style="max-width: 100%; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); border: 1px solid #ccc;">
-  </div>
-
-</div>
-
-
-
-
-
-<!-- ===================== FEATURED PROJECTS ===================== -->
-<br>
-<h2>🚀 Featured Projects</h2>
-
-<div style="display: flex; flex-wrap: wrap; gap: 30px; margin-top: 20px;">
-  
-  <!-- Project 1 -->
-  <div style="flex: 1 1 300px; border: 1px solid #ddd; border-radius: 10px; padding: 20px;">
-    <h3><a href="/projects/predictive-analysis-ecommerce">E-Commerce Predictive Analysis</a></h3>
-    <p>Built a predictive analytics model to forecast purchase behavior using customer segmentation and sales trends. Applied ML algorithms and visualized insights with Power BI & Python.</p>
-    <p><strong>Tech:</strong> Python, Pandas, Power BI, Scikit-learn</p>
-  </div>
-
-  <!-- Project 2 -->
-  <div style="flex: 1 1 300px; border: 1px solid #ddd; border-radius: 10px; padding: 20px;">
-    <h3><a href="/projects/social-networks-spatial-ml">Social Networks & Spatial ML</a></h3>
-    <p>Studied urban tech diffusion using Crunchbase data. Combined spatial analysis, network centrality, and Python-based visualizations to map innovation hubs.</p>
-    <p><strong>Tech:</strong> NetworkX, GeoPandas, Python, Spatial ML</p>
-  </div>
-
-</div>
-
-<br>
-<h2>📊 GitHub Stats</h2>
-<p align="center">
-  <img src="https://github-readme-stats.vercel.app/api?username=Bhupender-Bhupender&show_icons=true&theme=default" alt="GitHub Stats" width="60%">
-</p>
-
-<!-- force rebuild -->
-
+<!-- GITHUB STATS -->
+<section style="padding: 3em 2em; background: #f5f5f5;">
+  <h2>GitHub Activity</h2>
+  <p align="center">
+    <img src="https://github-readme-stats.vercel.app/api?username=Bhupender-Bhupender&show_icons=true&theme=default" alt="GitHub Stats" width="60%">
+  </p>
+</section>
