--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@ author_profile: true
 ---
 
 <!-- HERO SECTION -->
-<section style="text-align: center; padding: 4em 1em 2em; background: #f5f5f5;">
-  <h1 style="font-size: 2.8em; margin-bottom: 0.3em;">Bhupender Sumbharwal</h1>
-  <p style="font-size: 1.1em; color: #555;">Data Science & Business Analytics | Machine Learning | Data Engineering</p>
-  <img src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&size=22&pause=1000&color=000000&center=true&vCenter=true&width=600&lines=Welcome+to+my+portfolio" alt="Typing Text" style="margin-top: 20px;">
+<section style="background: linear-gradient(to right, #f8f9fa, #e8f0fe); padding: 3em 1.5em; text-align: center; border-radius: 8px;">
+  <h2 style="font-size: 2em; margin-bottom: 0.5em;">Turning Data into Decisions</h2>
+  <p style="font-size: 1.1em; color: #555; max-width: 700px; margin: 0 auto;">
+    Leveraging data science, business analytics, and machine learning to create real-world impact.  
+    Welcome to my personal portfolio — showcasing work across predictive analytics, automation, and smart data solutions.
+  </p>
 </section>
 
 <!-- ABOUT ME -->
@@ -24,32 +26,21 @@ author_profile: true
   </p>
 </section>
 
-<!-- SKILLS & TOOLS -->
-<section style="padding: 3em 2em; background: #f0f9ff;">
-  <h2>Skills & Tools</h2>
-  <ul>
-    <li><strong>Languages:</strong> Python, R, SQL, HTML, CSS</li>
-    <li><strong>Libraries & Frameworks:</strong> pandas, scikit-learn, matplotlib, seaborn, Flask, Streamlit</li>
-    <li><strong>Data Tools:</strong> Power BI, Tableau, MySQL, MariaDB, GitHub, R Shiny</li>
-    <li><strong>Others:</strong> Jupyter, VS Code, Selenium, Bash</li>
-  </ul>
-</section>
-
-<!-- FEATURED PROJECTS -->
-<section style="padding: 3em 2em; background: #fdf7f0;">
+<!-- PROJECTS -->
+<section id="projects" style="padding: 3em 2em; background: #fdf7f0;">
   <h2>Featured Projects</h2>
   <div style="display: flex; flex-wrap: wrap; gap: 30px; margin-top: 20px;">
 
     <!-- Project 1 -->
     <div style="flex: 1 1 300px; background: #ffffff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
-      <h3><a href="/projects/predictive-analysis-ecommerce">E-Commerce Predictive Analysis</a></h3>
+      <h3>E-Commerce Predictive Analysis</h3>
       <p>Forecasted customer purchase behavior using machine learning, customer segmentation, and sales trends.</p>
       <p><strong>Tools:</strong> Python, Pandas, Scikit-learn, Power BI</p>
     </div>
 
     <!-- Project 2 -->
     <div style="flex: 1 1 300px; background: #ffffff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
-      <h3><a href="/projects/social-networks-spatial-ml">Social Networks & Spatial ML</a></h3>
+      <h3>Social Networks & Spatial ML</h3>
       <p>Analyzed startup innovation spread using spatial analysis, network centrality, and geographic mapping.</p>
       <p><strong>Tools:</strong> Python, GeoPandas, NetworkX</p>
     </div>
@@ -57,10 +48,19 @@ author_profile: true
   </div>
 </section>
 
-<!-- GITHUB STATS -->
-<section style="padding: 3em 2em; background: #f5f5f5;">
-  <h2>GitHub Activity</h2>
-  <p align="center">
-    <img src="https://github-readme-stats.vercel.app/api?username=Bhupender-Bhupender&show_icons=true&theme=default" alt="GitHub Stats" width="60%">
-  </p>
+<!-- CERTIFICATIONS -->
+<section id="certifications" style="padding: 3em 2em; background: #e9f5e9;">
+  <h2>Certifications</h2>
+  <ul>
+    <li><strong>Python Libraries for Data Analysis</strong> – Scaler by InterviewBit</li>
+    <li><strong>Anti-Money Laundering (AML)</strong> – University of Warsaw</li>
+  </ul>
+</section>
+
+<!-- CONTACT -->
+<section id="contact" style="padding: 3em 2em; background: #f5f5f5;">
+  <h2>Get in Touch</h2>
+  <p>Email: <a href="mailto:bb.datasage@gmail.com">bb.datasage@gmail.com</a></p>
+  <p>LinkedIn: <a href="https://linkedin.com/in/bhupender-134613345" target="_blank">View Profile</a></p>
+  <p>GitHub: <a href="https://github.com/Bhupender-Bhupender" target="_blank">Bhupender-Bhupender</a></p>
 </section>
