--- a/index.html
+++ b/index.html
@@ -64,3 +64,10 @@ author_profile: true
   <p>LinkedIn: <a href="https://linkedin.com/in/bhupender-134613345" target="_blank">View Profile</a></p>
   <p>GitHub: <a href="https://github.com/Bhupender-Bhupender" target="_blank">Bhupender-Bhupender</a></p>
 </section>
+
+<style>
+  html {
+    scroll-behavior: smooth;
+  }
+</style>
+
